# negminer

./: .gitignore  README.md  pyproject.toml
configs/: arguana.yml  fiqa.yml  msmarco.yml  scifact.yml
negminer/: args.py  index.py  log.py
negminer/embed/: __main__.py  encoder.py
negminer/embed/prepare/: __main__.py  data.py
negminer/export/: __main__.py
negminer/prepare/: __main__.py  data.py
negminer/score/: __main__.py  ranker.py
negminer/score/prepare/: __main__.py
negminer/search/: __main__.py  index.py
